[metadata]
name = btn_cache
description = A local metadata cache for BTN
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
url = https://github.com/AllSeeingEyeTolledEweSew/btn_cache
license = Unlicense
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Public Domain
    Programming Language :: Python
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    dbver>=0.4
    better-bencode>=0.2.1
    requests>=2.24.0,<3
    feedparser>=5.2.1
    typing_extensions>=3.7.4
    importlib-resources>=3.3.0

[options.package_data]
btn_cache.sql = *.sql

[options.entry_points]
console_scripts =
    btn_scrape = btn_cache.cli.btn_scrape:main

[flake8]
extend-ignore =
    E203 # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices

[mypy]
python_version = 3.6
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[mypy-better_bencode.*]
ignore_missing_imports = True

[mypy-requests_mock.*]
ignore_missing_imports = True

[mypy-feedparser.*]
ignore_missing_imports = True

[tox:tox]
isolated_build = True
envlist = py36,py37,py38,py39

[testenv]
deps =
    pytest
    requests_mock
commands = pytest
