[metadata]
name = btn_cache
description = A local metadata cache for BTN
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/AllSeeingEyeTolledEweSew/btn_cache
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: File Sharing
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking

[options]
packages = find:
install_requires =
    better-bencode>=0.2.1
    dbver>=0.4
    feedparser>=5.2.1
    importlib-resources>=3.3.0
    requests>=2.24.0,<3
    typing_extensions>=3.7.4
python_requires = >=3.6

[options.entry_points]
console_scripts =
    btn_scrape = btn_cache.cli.btn_scrape:main

[options.package_data]
btn_cache.sql = *.sql

[flake8]
extend-ignore =
    E203 # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices

[mypy]
python_version = 3.6
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True

[mypy-better_bencode.*]
ignore_missing_imports = True

[mypy-requests_mock.*]
ignore_missing_imports = True

[mypy-feedparser.*]
ignore_missing_imports = True

[tox:tox]
isolated_build = True
envlist = py36,py37,py38,py39

[testenv]
deps =
    pytest
    requests_mock
    safety
commands =
    safety check
    pytest
